--- a/frontend/src/app/supplylink/components/warehouse/warehouse.component.html
+++ b/frontend/src/app/supplylink/components/warehouse/warehouse.component.html
@@ -2,7 +2,7 @@
     <h2>Warehouse</h2>
     <div class="">
         <form action="" [formGroup]="warehouseForm">
-              <div>
+              <!-- <div>
                 <label for="warehouseId">Warehouse ID</label>
                 <input id="warehouseId" formControlName="warehouseId" type="text" />
                 <div *ngIf="warehouseForm.get('warehouseId')?.touched && warehouseForm.get('warehouseId')?.invalid">
@@ -13,7 +13,7 @@
                     Warehouse ID must be at least 3 characters long.
                   </div>
                 </div>
-              </div>
+              </div> -->
             
               <div>
                 <label for="supplierId">Supplier ID</label>
